@@ -1,22 +1,28 @@
-function S = entropy(s, sys)
-% ENTROPY  Von Neumann entropy of the state.
-%  S = entropy(s)      % entropy
-%  S = entropy(s, sys) % entropy of entanglement
+function S = entropy(s, sys, alpha)
+% ENTROPY  Von Neumann or Renyi entropy of the state.
+%  S = entropy(s [, sys=[] [, alpha=1]])
 %
-%  Returns the entropy S of the state s.
+%  Returns the Renyi entropy of order alpha,
+%  S_\alpha(\rho) = \frac{1}{1-\alpha} \log_2 \trace(\rho^\alpha).
 %
-%  If a vector of subsystem indices sys is given, returns the
+%  When \alpha == 1 (default), this coincides with the von Neumann entropy
+%  S(\rho) = -\trace(\rho \log_2(\rho)).
+%
+%  If sys == [], returns the entropy of the state s.
+%  If sys is a vector of subsystem indices, returns the
 %  entropy of entanglement of the state s wrt. the partitioning
-%  defined by sys.
-%
-%  Entropy of entanglement is only defined for pure states.
-%
-%  S(\rho) = -\trace(\rho * \log_2(\rho))
+%  defined by sys. Entropy of entanglement is only defined for pure states.
 
-% Ville Bergholm 2009-2010
+% Ville Bergholm 2009-2014
 
+if nargin < 3
+    alpha = 1;
+end
+if nargin < 2
+    sys = [];
+end
 
-if (nargin == 2)
+if ~isempty(sys)
   s = ptrace(to_ket(s), sys); % partial trace over one partition
 end
 
@@ -25,6 +31,12 @@ if is_ket(s)
   S = 0;
 else
   p = eig(s.data);
-  p(find(p == 0)) = 1; % avoid trouble with the logarithm
-  S = -p'*log2(p);
+  if alpha ~= 1
+      % Renyi entropy
+      S = log2(sum(p .^ alpha)) / (1-alpha);
+  else
+      % Von Neumann entropy
+      p(find(p == 0)) = 1; % avoid trouble with the logarithm
+      S = -p'*log2(p);
+  end
 end
